# cremona

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  reusable-gate-selftest.yml  reusable-gate.yml  scorecards.yml
docs/: README.md  case-study-typer.md  ci-gate.md  codex-skill.md  comparison.md  faq.md  methodology.md  provenance.md  quickstart.md  release-checklist.md  report-format.md  reusable-workflow.md  troubleshooting.md
quality/: refactor-baseline.json
skills/cremona-proactive-refactor-audit/: SKILL.md
skills/cremona-proactive-refactor-audit/agents/: openai.yaml
skills/cremona-proactive-refactor-audit/references/: report-interpretation.md
skills/cremona-proactive-refactor-audit/scripts/: locate_cremona.py
src/cremona/: __init__.py  cli.py  pr_comment.py  scan.py
src/cremona/core/: __init__.py  baseline.py  config.py  engine.py  history.py  models.py  reporting.py  routing.py
src/cremona/profiles/: __init__.py  _compiler.py
src/cremona/python_tools/: __init__.py  engine.py
tests/: _report_builders.py  test_baseline_reporting.py  test_cli.py  test_cli_scan.py  test_config_profiles.py  test_cremona_scan.py  test_history_routing.py  test_pr_comment_renderer.py  test_profile_compiler.py  test_python_tools.py  test_scan_compatibility.py  test_timing_diagnostics.py
