[project]
name = "cremona"
version = "0.1.2"
description = "Proactive refactoring audit for Python repositories."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "refactoring",
    "technical-debt",
    "static-analysis",
    "python",
    "code-quality",
    "ci",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "complexipy>=5.2.0",
    "lizard>=1.21.3",
    "ruff>=0.15.2",
    "vulture>=2.16",
]

[project.urls]
Homepage = "https://github.com/NeapolitanIcecream/cremona"
Documentation = "https://github.com/NeapolitanIcecream/cremona/tree/main/docs"
Repository = "https://github.com/NeapolitanIcecream/cremona"
Issues = "https://github.com/NeapolitanIcecream/cremona/issues"
Changelog = "https://github.com/NeapolitanIcecream/cremona/releases"

[project.scripts]
cremona = "cremona.cli:main"

[dependency-groups]
dev = [
    "coverage>=7.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.cremona]
profile = "cremona-self-host"
targets = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    ".pyright",
    "*/__pycache__/*",
]
out_dir = "output/refactor-audit"
baseline = "quality/refactor-baseline.json"

[tool.cremona.profiles.cremona-self-host]
base = "generic-python"
subsystem_priority_offsets = { tests = -10 }

[tool.cremona.ruff]
warning_min = 11
warning_max = 15
high_min = 16
high_max = 24
critical_min = 25

[tool.cremona.lizard]
ccn_warning_min = 15
ccn_warning_max = 19
ccn_high_min = 20
ccn_high_max = 29
ccn_critical_min = 30
nloc_warning_min = 100
nloc_warning_max = 149
nloc_high_min = 150
nloc_high_max = 199
nloc_critical_min = 200
parameter_warning_min = 7
parameter_warning_max = 8
parameter_high_min = 9
parameter_high_max = 9
parameter_critical_min = 10

[tool.cremona.complexipy]
warning_min = 16
warning_max = 29
high_min = 30
high_max = 49
critical_min = 50

[tool.cremona.vulture]
review_candidate_min = 70
high_confidence_candidate_min = 80

[tool.cremona.history]
lookback_days = 180
min_shared_commits = 2
coupling_ignore_commit_file_count = 25

[tool.cremona.coverage]
coverage_json = ""

[build-system]
requires = ["uv_build>=0.10.4,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "cremona"
module-root = "src"
